Add scrape annotations to pod

--- a/k8s.yaml
+++ b/k8s.yaml
@@ -10,6 +10,9 @@ spec:
       labels:
         app: metadata-collector
         tier: IAM
+      annotations:
+        prometheus.io/scrape: "true"
+        prometheus.io/port: "8080"
     spec:
       containers:
       - name: metadata-collector
